	Added fieldPortrayal to DrawInfo2D
	Modification to how selection is done in preparation for a fix for TrailedPortrayal2D.
		When an object is selected, we deselect all the existing selected wrappers,
		then call setSelected(true) on the object[s].  ContinuousPortrayal2D,
		SparseGridPortrayal2D, and ObjectGridPortrayal2D then have been modified so
		that they always pass through setSelected(...) and only then determine if
		the objects should be put in the "selected wrappers", so its DrawInfo2D
		has the selected flag set.  setSelected(false) is also called.
	Fix to TrailedPortrayal2D in conjunction with MovablePortrayal2D.  TrailedPortrayal2D
		has to know it's been selected, but it's wrapped around a DIFFERENT field
		portrayal than the object it's trailing.  This is a problem because if it's
		not selected, it won't hilight the trail.  When would this happen?  If
		MovablePortrayal2D has moved an object, it just calls select on that object
		and not on the underlying trail.  The fix is a hack: we make sure that
		TrailedPortrayal2D wraps both the object in the trail and the object in
		the main field portrayal (see Flockers for an example), so its setSelected
		method is called for sure.  Then TrailedPortrayal maintains an internal
		boolean variable which checks against this, and also double-checks that the
		underlying field portrayal is the one it's supposed to draw in.
	Double2D, Double3D, MutableDouble2D, and MutableDouble3D modified so that, for 
		purposes of equals() and hashCode(), 0.0 == -0.0, so elements get hashed to
		the same cell.
	Deleted private function SimState.indexAfterArgumentForKey
	SimState.nameThread() no longer static.
	Added SimState.setSeed() and SimState.setJob()
	SimState.setRandom() deprecated.  Use setSeed() instead.
	Deprecated schedule.time().  Use getTime() instead.
	Made Schedule.scheduleOnce(Key, Steppable) protected
	RandomSequence now synchronizes on the *Schedule*, not the random number generator.